[package]
name = "error-window"
edition = "2021"
version = "1.0.0"
description = "Simple Rust proc macro that will make your main function output errors as dialog boxes as well as errors to the console."
license = "GPL OR LGPL"
homepage = "https://github.com/IoIxD/error-window"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-window-macro = {path = "./error-window-macro"}
dialog = "0.3.0"
