[package]
name = "error-window"
edition = "2021"
version = "1.0.0"
description = "Simple Rust proc macro that will make your main function output errors as dialog boxes as well as errors to the console."
license = "GPL-3.0-only OR LGPL-3.0-only"
homepage = "https://github.com/IoIxD/error-window"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-window-macro = "1.0.0"
dialog = "0.3.0"
