[package]
name = "error-window-macro"
version = "1.0.0"
edition = "2021"
description = "Macro that the error-window crate re-exports"
license = "GPL-3.0-only OR LGPL-3.0-only"
homepage = "https://github.com/IoIxD/error-window"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
